--- a/paginasignup.html
+++ b/paginasignup.html
@@ -141,6 +141,46 @@
                 class="paginasignup-textinput2 input"
               />
             </form>
+            <script>
+    function validarCadastro() {
+        var nome = document.getElementById('nomecompleto').value.trim();
+        var telefone = document.getElementById('telefone').value.trim();
+        var senha = document.getElementById('senha').value.trim();
+
+        // Validação do nome: apenas letras e espaços, até 30 caracteres
+        var nomeValido = /^[A-Za-zÀ-ÿ\s]{1,30}$/.test(nome);
+        if (!nomeValido) {
+            alert("O nome deve conter apenas letras e espaços (até 30 caracteres).");
+            return;
+        }
+
+        // Validação do telefone: apenas números, até 15 dígitos
+        var telefoneValido = /^[0-9]{1,15}$/.test(telefone);
+        if (!telefoneValido) {
+            alert("O telefone deve conter apenas números (até 15 dígitos).");
+            return;
+        }
+
+        // Validação da senha: até 10 caracteres
+        if (senha.length > 10) {
+            alert("A senha deve ter no máximo 10 caracteres.");
+            return;
+        }
+
+        // Formato de texto para salvar no arquivo
+        var cadastro = `'${nome}' | '${telefone}' | '${senha}' ||\n`;
+
+        // Escrever no arquivo cadastros.txt (não possível diretamente via JavaScript puro)
+        salvarCadastro(cadastro);
+    }
+
+    function salvarCadastro(cadastro) {
+        // Aqui você precisaria de um backend (servidor ou API) para escrever no arquivo
+        // O JavaScript rodando no browser não pode diretamente manipular arquivos no GitHub.
+        // Uma solução seria usar uma API backend em Node.js ou outra linguagem para escrever no arquivo.
+        alert("Cadastro: " + cadastro);
+    }
+</script>
           </div>
         </div>
       </div>
