--- a/paginasignup.html
+++ b/paginasignup.html
@@ -168,7 +168,7 @@
         }
 
         // Exibir a mensagem após validação
-        alert("Por limitações do GitHub, o cadastro não pode ser feito.\nCadastro teste: 'Meu Nome Da Silva' e senha: 'S&gredo'");
+        alert("Por limitações do GitHub, o cadastro não pode ser feito.\nCadastro teste: telefone: '123456789' e senha: 'S&gredo'");
     }
 </script>
           </div>
