--- a/paginalogin.html
+++ b/paginalogin.html
@@ -136,7 +136,7 @@
     const telefone = document.getElementById('telefonelogin').value;
     const senha = document.getElementById('senhalogin').value;
 
-    const telefoneCorreto = 246813579;
+    const telefoneCorreto = '246813579';
     const senhaCorreta = 'S&gredo';
 
     if (telefone === telefoneCorreto && senha === senhaCorreta) {
