--- a/paginalogin.html
+++ b/paginalogin.html
@@ -83,7 +83,7 @@
               </h1>
             </div>
             <div class="header-botoes">
-              <button type="button" class="header-button button botao">
+              <button type="button" class="header-button button botao" onclick="window.location.href='paginasignup.html';>
                 <span class="botao">
                   <fragment class="paginalogin-fragment1">
                     <span class="paginalogin-text1 botao">
