--- a/paginasignup.html
+++ b/paginasignup.html
@@ -84,7 +84,7 @@
               </h1>
             </div>
             <div class="header-botoes">
-              <button type="button" class="header-button button botao">
+              <button type="button" class="header-button button botao" onclick="window.location.href='paginalogin.html';>
                 <span class="botao">
                   <fragment class="paginasignup-fragment1">
                     <span class="paginasignup-text1 botao">
