--- a/index.html
+++ b/index.html
@@ -1,204 +1,250 @@
 <!DOCTYPE html>
 <html lang="english">
-  <head>
-    <title>exported project</title>
-    <meta property="og:title" content="exported project" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <meta property="twitter:card" content="summary_large_image" />
 
-    <style data-tag="reset-style-sheet">
-      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
-    </style>
-    <style data-tag="default-style-sheet">
-      html {
-        font-family: Inter;
-        font-size: 36px;
-      }
+<head>
+  <title>Sabor de Casa Delivery</title>
+  <meta property="og:title" content="Sabor de Casa Delivery" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta property="twitter:card" content="summary_large_image" />
 
-      body {
-        font-weight: 400;
-        font-style:normal;
-        text-decoration: none;
-        text-transform: none;
-        letter-spacing: -10%;
-        line-height: 200%;
-        color: var(--dl-color-theme-neutral-dark);
-        background: var(--dl-color-theme-neutral-light);
+  <style data-tag="reset-style-sheet">
+    html {
+      line-height: 1.15;
+    }
 
-        fill: var(--dl-color-theme-neutral-dark);
-      }
-    </style>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/animate.css@4.1.1/animate.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
-      data-tag="font"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&amp;display=swap"
-      data-tag="font"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
-      data-tag="font"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Pacifico:wght@400&amp;display=swap"
-      data-tag="font"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css"
-    />
-  </head>
-  <body>
-    <link rel="stylesheet" href="./style.css" />
-    <div>
-      <link href="./index.css" rel="stylesheet" />
+    body {
+      margin: 0;
+    }
 
-      <div class="pagina-inicial-container">
-        <header class="pagina-inicial-header">
-          <div class="pagina-inicial-icone">
-            <img
-              alt="image"
-              src="public/external/bowl-200h.png"
-              class="pagina-inicial-image1"
-            />
-          </div>
-          <div class="pagina-inicial-titulo">
-            <h1 class="pagina-inicial-text10">Sabor de Casa Delivery</h1>
-          </div>
-          <div class="pagina-inicial-botoes">
-            <button type="button" class="pagina-inicial-button1 botao button" onclick="window.location.href='paginasignup.html';">
-              <span class="pagina-inicial-text11 botao">
-                <span>Criar conta</span>
-                <br />
-              </span>
-            </button>
-            <button type="button" class="pagina-inicial-button2 button botao" onclick="window.location.href='paginalogin.html';"">
-              <span class="pagina-inicial-text14 botao">
-                <span>Entrar</span>
-                <br />
-              </span>
-            </button>
-          </div>
-        </header>
-        <div class="pagina-inicial-ofertadodia">
-          <div class="pagina-inicial-containerfrango">
-            <img
-              alt="image"
-              src="public/3-600w.png"
-              class="pagina-inicial-image2"
-            />
-          </div>
-          <div class="pagina-inicial-containeroferta">
-            <span class="pagina-inicial-text17 h2">
-              <span>Oferta do dia: Arroz de frango</span>
-              <br />
-              <span>R$ 7,00</span>
-              <br />
-            </span>
-            <span class="pagina-inicial-text22 h3">
-              Ingredientes: Arroz, frango, ervilha, frutas e legumes
-            </span>
-          </div>
+    * {
+      box-sizing: border-box;
+      border-width: 0;
+      border-style: solid;
+    }
+
+    p,
+    li,
+    ul,
+    pre,
+    div,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    figure,
+    blockquote,
+    figcaption {
+      margin: 0;
+      padding: 0;
+    }
+
+    button {
+      background-color: transparent;
+    }
+
+    button,
+    input,
+    optgroup,
+    select,
+    textarea {
+      font-family: inherit;
+      font-size: 100%;
+      line-height: 1.15;
+      margin: 0;
+    }
+
+    button,
+    select {
+      text-transform: none;
+    }
+
+    button,
+    [type="button"],
+    [type="reset"],
+    [type="submit"] {
+      -webkit-appearance: button;
+    }
+
+    button::-moz-focus-inner,
+    [type="button"]::-moz-focus-inner,
+    [type="reset"]::-moz-focus-inner,
+    [type="submit"]::-moz-focus-inner {
+      border-style: none;
+      padding: 0;
+    }
+
+    button:-moz-focus,
+    [type="button"]:-moz-focus,
+    [type="reset"]:-moz-focus,
+    [type="submit"]:-moz-focus {
+      outline: 1px dotted ButtonText;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: inherit;
+    }
+
+    input {
+      padding: 2px 4px;
+    }
+
+    img {
+      display: block;
+    }
+
+    html {
+      scroll-behavior: smooth
+    }
+  </style>
+  <style data-tag="default-style-sheet">
+    html {
+      font-family: Inter;
+      font-size: 36px;
+    }
+
+    body {
+      font-weight: 400;
+      font-style: normal;
+      text-decoration: none;
+      text-transform: none;
+      letter-spacing: -10%;
+      line-height: 200%;
+      color: var(--dl-color-theme-neutral-dark);
+      background: var(--dl-color-theme-neutral-light);
+
+      fill: var(--dl-color-theme-neutral-dark);
+    }
+  </style>
+  <link rel="stylesheet" href="https://unpkg.com/animate.css@4.1.1/animate.css" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico:wght@400&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet" href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" />
+</head>
+
+<body>
+  <link rel="stylesheet" href="./style.css" />
+  <div>
+    <link href="./index.css" rel="stylesheet" />
+
+    <div class="pagina-inicial-container">
+      <header class="pagina-inicial-header">
+        <div class="pagina-inicial-icone"> <!--colocar link para home-->
+          <img alt="image" src="public/external/bowl-200h.png" class="pagina-inicial-image1" />
         </div>
-        <div class="pagina-inicial-cardpio">
-          <div class="pagina-inicial-titulocardapio">
-            <span class="pagina-inicial-text23 h2">Cardápio</span>
+        <div class="pagina-inicial-titulo">
+          <a href="index.html">
+            <h1 class="pagina-inicial-text10">Sabor de Casa Delivery</h1>
+          </a>
+        </div>
+        <div class="pagina-inicial-botoes">
+          <button type="button" class="pagina-inicial-button1 botao button"
+            onclick="window.location.href='paginasignup.html';">
+            <span class="pagina-inicial-text11 botao">
+              <span>Criar conta</span>
+              <br />
+            </span>
+          </button>
+          <button type="button" class="pagina-inicial-button2 button botao"
+            onclick="window.location.href='paginalogin.html';"">
+              <span class=" pagina-inicial-text14 botao">
+            <span>Entrar</span>
+            <br />
+            </span>
+          </button>
+        </div>
+      </header>
+      <div class="pagina-inicial-ofertadodia">
+        <a href="paginalogin.html">
+          <div class="pagina-inicial-containerfrango">
+            <img alt="image" src="public/3-600w.png" class="pagina-inicial-image2" />
           </div>
-          <div class="pagina-inicial-cards">
-            <carnedeboicard-wrapper
-              class="carnedeboicard-wrapper"
-              rootclassname="carnedeboicardundefined"
-            >
-              <!--Carnedeboicard component-->
-              <div
-                class="carnedeboicard-carnedeboicard carnedeboicardroot-class-name"
-              >
-                <span class="h4">
-                  <fragment class="pagina-inicial-fragment1">
-                    <span class="pagina-inicial-text24 h4">
-                      <span>Carne de boi</span>
-                      <br />
-                      <span>R$ 15,00</span>
-                      <br />
-                    </span>
-                  </fragment>
-                </span>
-                <div class="carnedeboicard-containerboi">
-                  <img
-                    alt="image"
-                    src="public/7-400w.png"
-                    class="carnedeboicard-image"
-                  />
-                </div>
-              </div>
-            </carnedeboicard-wrapper>
-            <carnedeboicard-wrapper-mxfv
-              class="carnedeboicard-wrapper-mxfv"
-              rootclassname="carnedeboicardundefined"
-            >
-              <!--Carnedeboicard component-->
-              <div
-                class="carnedeboicard-carnedeboicard1 carnedeboicardroot-class-name1"
-              >
-                <span class="h4">
-                  <fragment class="pagina-inicial-fragment2">
-                    <span class="pagina-inicial-text29 h4">
-                      <span>Peixes</span>
-                      <br />
-                      <span>R$ 20,00</span>
-                      <br />
-                    </span>
-                  </fragment>
-                </span>
-                <div class="carnedeboicard-containerboi1">
-                  <img
-                    alt="image"
-                    src="public/teste-400w.png"
-                    class="carnedeboicard-image1"
-                  />
-                </div>
-              </div>
-            </carnedeboicard-wrapper-mxfv>
-            <carnedeboicard-wrapper-4hx8
-              class="carnedeboicard-wrapper-4hx8"
-              rootclassname="carnedeboicardundefined"
-            >
-              <!--Carnedeboicard component-->
-              <div
-                class="carnedeboicard-carnedeboicard2 carnedeboicardroot-class-name2"
-              >
-                <span class="h4">
-                  <fragment class="pagina-inicial-fragment3">
-                    <span class="pagina-inicial-text34 h4">
-                      <span>Saladas</span>
-                      <br />
-                      <span>R$ 25,00</span>
-                      <br />
-                    </span>
-                  </fragment>
-                </span>
-                <div class="carnedeboicard-containerboi2">
-                  <img
-                    alt="image"
-                    src="public/4-400w.png"
-                    class="carnedeboicard-image2"
-                  />
-                </div>
-              </div>
-            </carnedeboicard-wrapper-4hx8>
-          </div>
+        </a>
+        <div class="pagina-inicial-containeroferta">
+          <span class="pagina-inicial-text17 h2">
+            <span>Oferta do dia: Arroz de frango</span>
+            <br />
+            <span>R$ 7,00</span>
+            <br />
+          </span>
+          <span class="pagina-inicial-text22 h3">
+            Ingredientes: Arroz, frango, ervilha, frutas e legumes
+          </span>
         </div>
       </div>
+      <hr style="border: 1px solid black; width: 80%;">
+      <div class="pagina-inicial-cardpio">
+        <div class="pagina-inicial-titulocardapio">
+          <span class="pagina-inicial-text23 h2">Cardápio</span>
+        </div>
+        <div class="pagina-inicial-cards">
+          <carnedeboicard-wrapper>
+            <!--Carnedeboicard component-->
+            <div>
+              <div>
+                <a href="paginalogin.html">
+                  <img alt="image" src="public/7-400w.png" />
+                </a>
+              </div>
+              <span>
+                <span class="pagina-inicial-text24 h4">
+                  <span>Carne de boi</span>
+                  <br />
+                  <span>R$ 15,00</span>
+                </span>
+              </span>
+            </div>
+          </carnedeboicard-wrapper>
+          <carnedeboicard-wrapper-mxfv>
+            <!--Carnedeboicard component-->
+            <div>
+              <div>
+                <a href="paginalogin.html">
+                  <img alt="image" src="public/teste-400w.png" />
+                </a>
+              </div>
+              <span>
+                <span class="pagina-inicial-text29 h4">
+                  <span>Peixes</span>
+                  <br />
+                  <span>R$ 20,00</span>
+                </span>
+              </span>
+            </div>
+          </carnedeboicard-wrapper-mxfv>
+          <carnedeboicard-wrapper-4hx8>
+            <!--Carnedeboicard component-->
+            <div>
+              <a href="paginalogin.html">
+                <img alt="image" src="public/4-400w.png" />
+              </a>
+            </div>
+            <span>
+              <span class="pagina-inicial-text34 h4">
+                <span>Saladas</span>
+                <br />
+                <span>R$ 25,00</span>
+              </span>
+            </span>
+        </div>
+      </div>
+      </carnedeboicard-wrapper-4hx8>
     </div>
-  </body>
+  </div>
+  </div>
+  </div>
+</body>
+
 </html>
