--- a/paginalogin.html
+++ b/paginalogin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="english">
   <head>
-    <title>exported project</title>
+    <title>Sabor de Casa Delivery Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -76,9 +76,11 @@
             <div class="header-titulo">
               <h1 class="header-text1">
                 <fragment class="paginalogin-fragment2">
-                  <span class="paginalogin-text4 h1">
+                  <a href="index.html">
+                   <span class="paginalogin-text4 h1">
                     Sabor de Casa Delivery
-                  </span>
+                    </span>
+                     </a>
                 </fragment>
               </h1>
             </div>
