--- a/paginasignup.html
+++ b/paginasignup.html
@@ -77,9 +77,11 @@
             <div class="header-titulo">
               <h1 class="header-text1">
                 <fragment class="paginasignup-fragment2">
-                  <span class="paginasignup-text4 h1">
+                  <a href="index.html">
+                   <span class="paginalogin-text4 h1">
                     Sabor de Casa Delivery
-                  </span>
+                    </span>
+                  </a>
                 </fragment>
               </h1>
             </div>
