--- a/paginasignup.html
+++ b/paginasignup.html
@@ -78,7 +78,7 @@
               <h1 class="header-text1">
                 <fragment class="paginasignup-fragment2">
                   <a href="index.html">
-                   <span class="paginalogin-text4 h1">
+                   <span class="paginasignup-text4 h1">
                     Sabor de Casa Delivery
                     </span>
                   </a>
