--- a/paginasignup.html
+++ b/paginasignup.html
@@ -170,7 +170,7 @@
         }
 
         // Exibir a mensagem após validação
-        alert("Por limitações do GitHub, o cadastro não pode ser feito.\nCadastro teste: telefone: 246813579 e senha: S&gredo");
+        alert("Por limitações, o GitHub não registra cadastros.\n Contudo, siga para a página de Login e teste: telefone: 246813579 e senha: S&gredo");
     }
 </script>
           </div>
