--- a/paginalogin.html
+++ b/paginalogin.html
@@ -140,7 +140,7 @@
     const senhaCorreta = 'S&gredo';
 
     if (telefone === telefoneCorreto && senha === senhaCorreta) {
-        window.location.href = 'https://rolladie.net/';
+        window.location.href = 'index.html';
     } else {
         if (telefone !== telefoneCorreto) {
             alert('Telefone incorreto.');
