--- a/paginasignup.html
+++ b/paginasignup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="english">
   <head>
-    <title>Paginasignup - exported project</title>
+    <title>Sabor de Casa Delivery Criar Conta</title>
     <meta property="og:title" content="Paginasignup - exported project" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
