--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
       </header>
       <div class="pagina-inicial-ofertadodia">
-        <a href="paginalogin.html">
+        <a href="finalizarpedido.html">
           <div class="pagina-inicial-containerfrango">
             <img alt="image" src="public/3-600w.png" class="pagina-inicial-image2" />
           </div>
@@ -194,7 +194,7 @@
             <!--Carnedeboicard component-->
             <div>
               <div>
-                <a href="paginalogin.html">
+                <a href="finalizarpedido.html">
                   <img alt="image" src="public/7-400w.png" />
                 </a>
               </div>
@@ -211,7 +211,7 @@
             <!--Carnedeboicard component-->
             <div>
               <div>
-                <a href="paginalogin.html">
+                <a href="finalizarpedido.html">
                   <img alt="image" src="public/teste-400w.png" />
                 </a>
               </div>
@@ -227,7 +227,7 @@
           <carnedeboicard-wrapper-4hx8>
             <!--Carnedeboicard component-->
             <div>
-              <a href="paginalogin.html">
+              <a href="finalizarpedido.html">
                 <img alt="image" src="public/4-400w.png" />
               </a>
             </div>
