--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <div class="pagina-inicial-container">
       <header class="pagina-inicial-header">
-        <div class="pagina-inicial-icone"> <!--colocar link para home-->
+        <div class="pagina-inicial-icone"> 
           <img alt="image" src="public/external/bowl-200h.png" class="pagina-inicial-image1" />
         </div>
         <div class="pagina-inicial-titulo">
@@ -167,11 +167,11 @@
         </div>
       </header>
       <div class="pagina-inicial-ofertadodia">
-        <a href="finalizarpedido.html">
+        <a href="finalizarpedido.html?nome=Arroz de frango&preco=7,00&imagem=public/3-600w.png">
           <div class="pagina-inicial-containerfrango">
-            <img alt="image" src="public/3-600w.png" class="pagina-inicial-image2" />
+           <img alt="image" src="public/3-600w.png" class="pagina-inicial-image2" />
           </div>
-        </a>
+         </a>
         <div class="pagina-inicial-containeroferta">
           <span class="pagina-inicial-text17 h2">
             <span>Oferta do dia: Arroz de frango</span>
@@ -194,8 +194,8 @@
             <!--Carnedeboicard component-->
             <div>
               <div>
-                <a href="finalizarpedido.html">
-                  <img alt="image" src="public/7-400w.png" />
+                <a href="finalizarpedido.html?nome=Carne de boi&preco=15,00&imagem=public/7-400w.png">
+                 <img alt="image" src="public/7-400w.png" />
                 </a>
               </div>
               <span>
@@ -211,8 +211,8 @@
             <!--Carnedeboicard component-->
             <div>
               <div>
-                <a href="finalizarpedido.html">
-                  <img alt="image" src="public/teste-400w.png" />
+                <a href="finalizarpedido.html?nome=Peixes&preco=20,00&imagem=public/teste-400w.png">
+                 <img alt="image" src="public/teste-400w.png" />
                 </a>
               </div>
               <span>
@@ -227,7 +227,7 @@
           <carnedeboicard-wrapper-4hx8>
             <!--Carnedeboicard component-->
             <div>
-              <a href="finalizarpedido.html">
+              <a href="finalizarpedido.html?nome=Salada&preco=35,00&imagem=public/4-400w.png">
                 <img alt="image" src="public/4-400w.png" />
               </a>
             </div>
